<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto"
    android:title="@string/preference_header_general" >

    <CheckBoxPreference
        android:key="global_start_on_boot"
        android:title="@string/preference_general_start_on_boot" />

    <ListPreference
        android:entries="@array/mode_titles"
        android:entryValues="@array/mode_values"
        android:key="global_mode"
        android:summary="@string/preference_general_mode_summary"
        android:title="@string/preference_general_mode_title" />

    <CheckBoxPreference
        android:key="global_analytics"
        android:summary="@string/preference_general_analytics_summary"
        android:title="@string/preference_general_analytics_title" />

</PreferenceScreen>