<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_discard"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_discard"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="always|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_push"
        android:icon="@drawable/ic_action_push"
        android:showAsAction="ifRoom"
        android:title="@string/menu_push" />
    
</menu>