<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Profile.Wrapper" >

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_name" />

            <View style="@style/Profile.Divider" />

            <EditText
                android:id="@+id/nameField"
                style="@style/Profile.Item.EditText"
                android:hint="@string/custom_profile_header_name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" >
            </EditText>
        </LinearLayout>

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_tag" />

            <View style="@style/Profile.Divider" />

            <LinearLayout style="@style/Profile.Item" >

                <EditText
                    android:id="@+id/tagField"
                    style="@style/Profile.SplitItemEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/custom_profile_header_tag"
                    android:imeOptions="actionDone" />

                <ImageButton
                    android:id="@+id/tagRequestButton"
                    style="@style/Profile.SplitItemImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/custom_profile_tag_picker_description"
                    android:src="@drawable/ic_button_folder" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_conditions" />

            <View style="@style/Profile.Divider" />

            <CheckBox
                android:id="@+id/unconnectedOnlyCheckBox"
                style="@style/Profile.Item.CheckBox"
                android:text="@string/custom_profile_label_unconnected_only" />
        </LinearLayout>

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_ringtone" />

            <View style="@style/Profile.Divider" />

            <Button
                android:id="@+id/ringtoneSelector"
                style="@style/Profile.Item.FauxSpinner" />
        </LinearLayout>

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_extras" />

            <View style="@style/Profile.Divider" />

            <CheckBox
                android:id="@+id/vibrateCheckBox"
                style="@style/Profile.Item.CheckBox"
                android:text="@string/custom_profile_label_vibrate" />

            <CheckBox
                android:id="@+id/lightsCheckBox"
                style="@style/Profile.Item.CheckBox"
                android:text="@string/custom_profile_label_lights" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>