<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto" >

    <header
        android:id="@+id/device_preferences"
        android:fragment="com.mattprecious.notisync.preferences.DevicePreferenceFragment"
        android:icon="@drawable/ic_settings_devices"
        android:title="@string/preference_header_devices" />
    <header
        android:id="@+id/general_preferences"
        android:fragment="com.mattprecious.notisync.preferences.GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_general"
        android:title="@string/preference_header_general" />
    <header
        android:id="@+id/bluetoothfix_preferences"
        android:fragment="com.mattprecious.notisync.preferences.BluetoothFixPreferenceFragment"
        android:icon="@drawable/ic_settings_bluetoothfix"
        android:title="@string/preference_header_bluetooth_fix" />
    <header
        android:id="@+id/about_preferences"
        android:fragment="com.mattprecious.notisync.preferences.AboutPreferenceFragment"
        android:icon="@drawable/ic_settings_about"
        android:title="@string/preference_header_about" />

</preference-headers>