<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:text="@string/samsung_tts_message"
            android:textSize="18sp" />

        <Button
            android:id="@+id/disable_talkback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip"
            android:text="@string/samsung_tts_disable_talkback" />

        <Button
            android:id="@+id/disable_google_tts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip"
            android:text="@string/samsung_tts_disable_google" />

        <Button
            android:id="@+id/disable_samsung_tts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/samsung_tts_disable_samsung" />
    </LinearLayout>

</ScrollView>