<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Matthew Precious
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout style="@style/Profile.Wrapper" >

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_ringtone" />

            <View style="@style/Profile.Divider" />

            <Button
                android:id="@+id/ringtoneSelector"
                style="@style/Profile.Item.FauxSpinner" />
        </LinearLayout>

        <LinearLayout style="@style/Profile.Section" >

            <TextView
                style="@style/Profile.Header"
                android:text="@string/custom_profile_header_extras" />

            <View style="@style/Profile.Divider" />

            <CheckBox
                android:id="@+id/vibrateCheckBox"
                style="@style/Profile.Item.CheckBox"
                android:text="@string/custom_profile_label_vibrate" />

            <CheckBox
                android:id="@+id/lightsCheckBox"
                style="@style/Profile.Item.CheckBox"
                android:text="@string/custom_profile_label_lights" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
