<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Matthew Precious
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="header_devices"
        android:title="@string/preference_header_devices" >
        <intent
            android:targetClass="com.mattprecious.notisync.activity.DeviceListActivity"
            android:targetPackage="com.mattprecious.notisync" />
    </Preference>
    <Preference
        android:key="header_general"
        android:title="@string/preference_header_general" >
        <intent
            android:action="com.mattprecious.notisync.preferences.PREFS_GENERAL"
            android:targetClass="com.mattprecious.notisync.preferences.SettingsActivity"
            android:targetPackage="com.mattprecious.notisync" />
    </Preference>
    <Preference
        android:key="header_bluetooth_fix"
        android:title="@string/preference_header_bluetooth_fix" >
        <intent
            android:action="com.mattprecious.notisync.preferences.PREFS_BLUETOOTH_FIX"
            android:targetClass="com.mattprecious.notisync.preferences.SettingsActivity"
            android:targetPackage="com.mattprecious.notisync" />
    </Preference>
    <Preference
        android:key="header_about"
        android:title="@string/preference_header_about" >
        <intent
            android:action="com.mattprecious.notisync.preferences.PREFS_ABOUT"
            android:targetClass="com.mattprecious.notisync.preferences.SettingsActivity"
            android:targetPackage="com.mattprecious.notisync" />
    </Preference>

</PreferenceScreen>
