<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Matthew Precious
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer" >

    <TextView
        style="@style/WizardPageTitle"
        android:text="@string/wizard_mode_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:id="@+id/primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="10dip" >

                <TextView
                    android:id="@+id/primary_title"
                    style="@style/WizardPageText"
                    android:text="@string/wizard_mode_primary_title" />

                <TextView
                    android:id="@+id/primary_description"
                    style="@style/WizardPageText"
                    android:text="@string/wizard_mode_primary_description"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/primary_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="10dip" >

                <TextView
                    android:id="@+id/secondary_title"
                    style="@style/WizardPageText"
                    android:text="@string/wizard_mode_secondary_title" />

                <TextView
                    android:id="@+id/secondary_description"
                    style="@style/WizardPageText"
                    android:text="@string/wizard_mode_secondary_description"
                    android:textSize="18sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/secondary_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
